language/move-lang/tests/move_check/parser/use_module_member_invalid_comma.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/use_module_member_invalid_comma.move:4:26
  │
4 │     use 0x1::X::{S as XS,,};
  │                          ^ Expected a module member alias

