language/move-lang/tests/move_check/parser/use_module_member_invalid_comma.move

module M {

    use 0x1::X::{S as XS,,};
}
